v3-cuda4.2/src/cuda-sim/ptxinfo.output
Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input line

    3 line: HEADER INFO COLON line_info
    4     | HEADER IDENTIFIER COMMA LINE INT_OPERAND SEMICOLON WARNING
    5     | HEADER WARNING

    6 line_info: function_name
    7          | function_info

    8 function_name: FUNC QUOTE IDENTIFIER QUOTE
    9              | FUNC QUOTE IDENTIFIER QUOTE FOR QUOTE IDENTIFIER QUOTE

   10 function_info: info
   11              | function_info COMMA info

   12 info: USED INT_OPERAND REGS
   13     | tuple LMEM
   14     | tuple SMEM
   15     | INT_OPERAND BYTES CMEM LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET
   16     | INT_OPERAND BYTES LMEM
   17     | INT_OPERAND BYTES SMEM
   18     | INT_OPERAND BYTES CMEM
   19     | INT_OPERAND REGS

   20 tuple: INT_OPERAND PLUS INT_OPERAND BYTES


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_OPERAND (258) 4 12 15 16 17 18 19 20
HEADER (259) 3 4 5
INFO (260) 3
FUNC (261) 8 9
USED (262) 12
REGS (263) 12 19
BYTES (264) 15 16 17 18 20
LMEM (265) 13 16
SMEM (266) 14 17
CMEM (267) 15 18
IDENTIFIER (268) 4 8 9
PLUS (269) 20
COMMA (270) 4 11
LEFT_SQUARE_BRACKET (271) 15
RIGHT_SQUARE_BRACKET (272) 15
COLON (273) 3
SEMICOLON (274) 4
QUOTE (275) 8 9
LINE (276) 4
WARNING (277) 4 5
FOR (278) 9


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
input (25)
    on left: 1 2, on right: 0 2
line (26)
    on left: 3 4 5, on right: 2
line_info (27)
    on left: 6 7, on right: 3
function_name (28)
    on left: 8 9, on right: 6
function_info (29)
    on left: 10 11, on right: 7 11
info (30)
    on left: 12 13 14 15 16 17 18 19, on right: 10 11
tuple (31)
    on left: 20, on right: 13 14


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    HEADER  shift, and go to state 3

    line  go to state 4


State 2

    0 $accept: input $end .

    $default  accept


State 3

    3 line: HEADER . INFO COLON line_info
    4     | HEADER . IDENTIFIER COMMA LINE INT_OPERAND SEMICOLON WARNING
    5     | HEADER . WARNING

    INFO        shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    WARNING     shift, and go to state 7


State 4

    2 input: input line .

    $default  reduce using rule 2 (input)


State 5

    3 line: HEADER INFO . COLON line_info

    COLON  shift, and go to state 8


State 6

    4 line: HEADER IDENTIFIER . COMMA LINE INT_OPERAND SEMICOLON WARNING

    COMMA  shift, and go to state 9


State 7

    5 line: HEADER WARNING .

    $default  reduce using rule 5 (line)


State 8

    3 line: HEADER INFO COLON . line_info

    INT_OPERAND  shift, and go to state 10
    FUNC         shift, and go to state 11
    USED         shift, and go to state 12

    line_info      go to state 13
    function_name  go to state 14
    function_info  go to state 15
    info           go to state 16
    tuple          go to state 17


State 9

    4 line: HEADER IDENTIFIER COMMA . LINE INT_OPERAND SEMICOLON WARNING

    LINE  shift, and go to state 18


State 10

   15 info: INT_OPERAND . BYTES CMEM LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET
   16     | INT_OPERAND . BYTES LMEM
   17     | INT_OPERAND . BYTES SMEM
   18     | INT_OPERAND . BYTES CMEM
   19     | INT_OPERAND . REGS
   20 tuple: INT_OPERAND . PLUS INT_OPERAND BYTES

    REGS   shift, and go to state 19
    BYTES  shift, and go to state 20
    PLUS   shift, and go to state 21


State 11

    8 function_name: FUNC . QUOTE IDENTIFIER QUOTE
    9              | FUNC . QUOTE IDENTIFIER QUOTE FOR QUOTE IDENTIFIER QUOTE

    QUOTE  shift, and go to state 22


State 12

   12 info: USED . INT_OPERAND REGS

    INT_OPERAND  shift, and go to state 23


State 13

    3 line: HEADER INFO COLON line_info .

    $default  reduce using rule 3 (line)


State 14

    6 line_info: function_name .

    $default  reduce using rule 6 (line_info)


State 15

    7 line_info: function_info .
   11 function_info: function_info . COMMA info

    COMMA  shift, and go to state 24

    $default  reduce using rule 7 (line_info)


State 16

   10 function_info: info .

    $default  reduce using rule 10 (function_info)


State 17

   13 info: tuple . LMEM
   14     | tuple . SMEM

    LMEM  shift, and go to state 25
    SMEM  shift, and go to state 26


State 18

    4 line: HEADER IDENTIFIER COMMA LINE . INT_OPERAND SEMICOLON WARNING

    INT_OPERAND  shift, and go to state 27


State 19

   19 info: INT_OPERAND REGS .

    $default  reduce using rule 19 (info)


State 20

   15 info: INT_OPERAND BYTES . CMEM LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET
   16     | INT_OPERAND BYTES . LMEM
   17     | INT_OPERAND BYTES . SMEM
   18     | INT_OPERAND BYTES . CMEM

    LMEM  shift, and go to state 28
    SMEM  shift, and go to state 29
    CMEM  shift, and go to state 30


State 21

   20 tuple: INT_OPERAND PLUS . INT_OPERAND BYTES

    INT_OPERAND  shift, and go to state 31


State 22

    8 function_name: FUNC QUOTE . IDENTIFIER QUOTE
    9              | FUNC QUOTE . IDENTIFIER QUOTE FOR QUOTE IDENTIFIER QUOTE

    IDENTIFIER  shift, and go to state 32


State 23

   12 info: USED INT_OPERAND . REGS

    REGS  shift, and go to state 33


State 24

   11 function_info: function_info COMMA . info

    INT_OPERAND  shift, and go to state 10
    USED         shift, and go to state 12

    info   go to state 34
    tuple  go to state 17


State 25

   13 info: tuple LMEM .

    $default  reduce using rule 13 (info)


State 26

   14 info: tuple SMEM .

    $default  reduce using rule 14 (info)


State 27

    4 line: HEADER IDENTIFIER COMMA LINE INT_OPERAND . SEMICOLON WARNING

    SEMICOLON  shift, and go to state 35


State 28

   16 info: INT_OPERAND BYTES LMEM .

    $default  reduce using rule 16 (info)


State 29

   17 info: INT_OPERAND BYTES SMEM .

    $default  reduce using rule 17 (info)


State 30

   15 info: INT_OPERAND BYTES CMEM . LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET
   18     | INT_OPERAND BYTES CMEM .

    LEFT_SQUARE_BRACKET  shift, and go to state 36

    $default  reduce using rule 18 (info)


State 31

   20 tuple: INT_OPERAND PLUS INT_OPERAND . BYTES

    BYTES  shift, and go to state 37


State 32

    8 function_name: FUNC QUOTE IDENTIFIER . QUOTE
    9              | FUNC QUOTE IDENTIFIER . QUOTE FOR QUOTE IDENTIFIER QUOTE

    QUOTE  shift, and go to state 38


State 33

   12 info: USED INT_OPERAND REGS .

    $default  reduce using rule 12 (info)


State 34

   11 function_info: function_info COMMA info .

    $default  reduce using rule 11 (function_info)


State 35

    4 line: HEADER IDENTIFIER COMMA LINE INT_OPERAND SEMICOLON . WARNING

    WARNING  shift, and go to state 39


State 36

   15 info: INT_OPERAND BYTES CMEM LEFT_SQUARE_BRACKET . INT_OPERAND RIGHT_SQUARE_BRACKET

    INT_OPERAND  shift, and go to state 40


State 37

   20 tuple: INT_OPERAND PLUS INT_OPERAND BYTES .

    $default  reduce using rule 20 (tuple)


State 38

    8 function_name: FUNC QUOTE IDENTIFIER QUOTE .
    9              | FUNC QUOTE IDENTIFIER QUOTE . FOR QUOTE IDENTIFIER QUOTE

    FOR  shift, and go to state 41

    $default  reduce using rule 8 (function_name)


State 39

    4 line: HEADER IDENTIFIER COMMA LINE INT_OPERAND SEMICOLON WARNING .

    $default  reduce using rule 4 (line)


State 40

   15 info: INT_OPERAND BYTES CMEM LEFT_SQUARE_BRACKET INT_OPERAND . RIGHT_SQUARE_BRACKET

    RIGHT_SQUARE_BRACKET  shift, and go to state 42


State 41

    9 function_name: FUNC QUOTE IDENTIFIER QUOTE FOR . QUOTE IDENTIFIER QUOTE

    QUOTE  shift, and go to state 43


State 42

   15 info: INT_OPERAND BYTES CMEM LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET .

    $default  reduce using rule 15 (info)


State 43

    9 function_name: FUNC QUOTE IDENTIFIER QUOTE FOR QUOTE . IDENTIFIER QUOTE

    IDENTIFIER  shift, and go to state 44


State 44

    9 function_name: FUNC QUOTE IDENTIFIER QUOTE FOR QUOTE IDENTIFIER . QUOTE

    QUOTE  shift, and go to state 45


State 45

    9 function_name: FUNC QUOTE IDENTIFIER QUOTE FOR QUOTE IDENTIFIER QUOTE .

    $default  reduce using rule 9 (function_name)
